--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,27 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
+      - .env:/app/apps/web/.env
     environment:
       - NODE_ENV=development
       - NEXT_TELEMETRY_DISABLED=1
+      - POSTGRES_USER=${POSTGRES_USER:-markslides}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-markslides}
+      - POSTGRES_DB=${POSTGRES_DB:-markslides}
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-markslides}:${POSTGRES_PASSWORD:-markslides}@pgvector:5432/${POSTGRES_DB:-markslides}?schema=public
+    depends_on:
+      - pgvector
     command: "npm run dev"
+  pgvector:
+    image: pgvector/pgvector:pg17-trixie
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgvector_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER:-markslides}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-markslides}
+      - POSTGRES_DB=${POSTGRES_DB:-markslides}
+
+volumes:
+  pgvector_data:
