--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,22 +17,27 @@
     "@uidotdev/usehooks": "^2.4.1",
     "browser-fs-access": "^0.35.0",
     "lucide-react": "^0.395.0",
+    "minio": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-to-print": "^2.15.1",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.2",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/eslint": "^8.44.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.53.0",
     "prisma": "^5.7.1",
     "typescript": "^5.2.2"
